# laminator_controller

./: .gitignore  Cargo.toml  Laminator Block Diagram.pptx  setup_notes.txt
.cargo/: config
data/: Pico-laminator-Temp and Pressure measurements and filtering.xlsx
src/: chamber_controller.rs  chat.rs  data_structs.rs  driver_max31855.rs  handle_command.rs  heater_controller.rs  machine_mode.rs  main.rs  old_main.rs  pressure_sensor_controller.rs  pwm_controller.rs  recipe_manager.rs  signal_processing.rs  snippets.rs  thermocouple_controller.rs  time_util.rs  valve_controller.rs
