[package]
name = "laminator_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.3"
cortex-m = "0.7.2"
panic-halt = "0.2.0"
embedded-hal ="0.2.7"
cortex-m-rt = {version = "0.7.1"}
fugit = "0.3.6"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
rtic-monotonic = { version = "1.0.0", optional = true }

#rp-pico = "0.5.0"
#rp2040-hal = "0.6.0"
rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }

[dev-dependencies]

[features]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# >>> opt-level = 3, changed to 1 for interactive debug
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false