[package]
name = "laminator_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.3"
cortex-m = "0.7.2"
panic-halt = "0.2.0"
embedded-hal ="0.2.7"
cortex-m-rt = {version = "0.7.1"}
fugit = "0.3.6"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
rtic-monotonic = { version = "1.0.0", optional = true }
libm = "0.2.5"
serde = { version = "1.0.145", default-features = false, features = ["derive"] } 
serde-json-core = "0.4.0"


#rp-pico = "0.5.0"
#rp2040-hal = "0.6.0"

# --- I used these 2 lines when testing the new rtic-monotonic feature.  Works.---
#rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
#rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }

# --- rtic-monotonic is now on github main branch but unreleased? and jannic just modified the UART constructor
# --- so what should my cargo look like now?
# --- lines below cause rust-analyzer error
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", features = ["rtic-monotonic"]}
rp-pico = { git = "https://github.com/rp-rs/rp-hal" }

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]   

[dev-dependencies]

[features]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# >>> opt-level = 3, changed to 1 for interactive debug
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false